rust/surrealdb-orm-tests/tests/snapshots/geomtry_wrapper__linestring.snap
---
source: surrealdb-orm-tests/tests/geomtry_wrapper.rs
expression: company
---
{"id":"company:32","nam":"285cfebe-a7f2-4100-aeb3-7f73998fff02","name":"Mana Inc.","founded":"1967-05-03T00:00:00Z","founders":[{"name":"John Doe"},{"name":"Jane Doe"}],"tags":["foo","bar"],"home":{"type":"LineString","coordinates":[[-122.33583,47.60621],[-122.33583,47.60622],[-122.33584,47.60622],[-122.33584,47.60621],[-122.33583,47.60621]]}}
