rust/surrealdb-orm-tests/tests/snapshots/geomtry_wrapper__multipolygon-2.snap
---
source: surrealdb-orm-tests/tests/geomtry_wrapper.rs
expression: company
---
{"id":"company:lowo","nam":"285cfebe-a7f2-4100-aeb3-7f73998fff02","name":"Mana Inc.","founded":"1967-05-03T00:00:00Z","founders":[{"name":"John Doe"},{"name":"Jane Doe"}],"tags":["foo","bar"],"home":{"type":"MultiPolygon","coordinates":[[[[0.0,0.0],[1.0,1.0],[2.0,2.0],[0.0,0.0]]],[[[3.0,3.0],[4.0,4.0],[5.0,5.0],[3.0,3.0]]],[[[-111.0,45.0],[-111.0,41.0],[-104.0,41.0],[-104.0,45.0],[-111.0,45.0]],[[-110.0,44.0],[-110.0,42.43],[-105.0,42.0],[-105.0,44.0],[-110.0,44.0]]]]}}
