rust/surrealdb-orm-tests/tests/snapshots/geomtry_wrapper__polygon.snap
---
source: surrealdb-orm-tests/tests/geomtry_wrapper.rs
expression: company
---
{"id":"company:lowo","nam":"285cfebe-a7f2-4100-aeb3-7f73998fff02","name":"Mana Inc.","founded":"1967-05-03T00:00:00Z","founders":[{"name":"John Doe"},{"name":"Jane Doe"}],"tags":["foo","bar"],"home":{"type":"Polygon","coordinates":[[[-111.0,45.0],[-111.0,41.0],[-104.0,41.0],[-104.0,45.0],[-111.0,45.0]]]}}
